# Pytorch-Wildlife

./: .gitignore  404.html  README.md  docs-requirements.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.githooks/: install.sh  pre-commit
.github/workflows/: deploy-docs.yml  publish.yml  release.yml
build_mkdocs/: index.html
cite/: index.html
docs/: api.md  benchmarks.md  build_mkdocs.md  cite.md  getting-started.md  index.md  inference-examples.md  install.md  installation.md  model_zoo.md  rp11_handoff.md  tags.md  user-manual.md
docs/design/: architecture.md
docs/fine_tuning_modules/: overview.md
docs/fine_tuning_modules/classification/: overview.md
docs/fine_tuning_modules/detection/: overview.md
docs/implement/perch2-phase-c/: COVERAGE_LOG.jsonl  SCOPE_LEDGER.json
docs/implement/perch2-phase-c/round_01/: coder-cli_report.md  coder-ffi-cpu_report.md  coder-ffi-gpu_report.md  coder-python_report.md  coder-server_report.md  inquisitor_review.md  verification-cargo-build.txt  verification.txt
docs/implement/perch2-phase-c/round_02/: fixer-ffi-cpu-r2-test.txt  fixer-ffi-cpu-r2_report.md  inquisitor_review.md  verification.txt  verifier-cargo-cli.txt  verifier-cargo-core.txt  verifier-cargo-cpu-lib.txt  verifier-cargo-server.txt  verifier-cargo-types.txt
docs/implement/perch2-phase-c/round_03/: inquisitor_review.md  verifier-cargo-cli.txt  verifier-cargo-core.txt  verifier-cargo-cpu-ffi.txt  verifier-cargo-cpu-lib.txt  verifier-cargo-server.txt  verifier-cargo-types.txt  verifier-git-checks.txt  verifier-scope-check.txt  verifier-suite-summary.txt
docs/review/audit-fix/: COVERAGE_LOG.jsonl  SCOPE_LEDGER.json
docs/review/audit-fix/round_01/: auditor_plan.md  auditor_report.md  file_ownership.md  inquisitor_approvals.md  inquisitor_current_verified.txt  inquisitor_review.md  reviewer_plan.md  reviewer_report.md  verification.txt
docs/review/audit-fix/round_02/: auditor_plan.md  auditor_report.md  file_ownership.md  inquisitor_approvals.md  inquisitor_review.md  reviewer_plan.md  reviewer_report.md  verification.txt
docs/review/audit-fix/round_03/: _scope.txt  auditor_plan.md  auditor_report.md  file_ownership.md  inquisitor_approvals.md  inquisitor_review.md  reviewer_plan.md  reviewer_report.md  subagent_ffi_notes.md  subagent_model_audio_notes.md  subagent_rest_owned_notes.md  verification.txt
docs/review/audit-fix/round_04/: auditor_plan.md  auditor_report.md  file_ownership.md  inquisitor_current_verified.txt  inquisitor_review.md  reviewer_plan.md  reviewer_report.md  verification.txt
docs/tech_report/: 00_executive_summary.md  01_background_motivation.md  02_project_timeline.md  03_architecture.md  04_design_decisions.md  05_implementation_details.md  06_gotchas_and_constraints.md  07_benchmarks.md  08_validation_and_testing.md  09_sparrow_studio_integration.md  10_lessons_learned.md  11_phase_3.5_planned.md  13_fine_tuning_pipeline.md  README.md  STYLE.md
docs/tech_report/appendices/: README.md  cli_commands.md  ffi_exports.md  http_endpoints.md  open_questions.md
docs/tech_report/appendices/benchmark_logs/: README.md
installation/: index.html
installer/: probe.ps1  probe.sh  probe_gpu_quality.ps1  probe_gpu_quality.sh  sparrow-engine-install.ps1  sparrow-engine-install.sh
installer/homebrew/: README.md  sparrow-engine-gpu.rb  sparrow-engine.rb
model_zoo/: index.html
overrides/: main.html
search/: search_index.json
sparrow-engine/: CHANGELOG.md  Cargo.toml
sparrow-engine/docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml
sparrow-engine/include/: sparrow_engine.h
sparrow-engine/scripts/: build_and_tag_sparrow_engine.sh  check_ffi_symbols.sh  clean_room_test.sh  download_models.sh  export_image_tarball.sh  ort-env.sh  package_cli_tarball.sh  sparrow_contract_test.sh  test_nvjpeg_dlopen.sh
sparrow-engine/sparrow-engine-cli/: Cargo.toml
sparrow-engine/sparrow-engine-cli/src/: main.rs  ort_resolver.rs
sparrow-engine/sparrow-engine-core/: Cargo.toml
sparrow-engine/sparrow-engine-core/src/: preprocess_audio.rs  viz.rs
sparrow-engine/sparrow-engine-core/tests/: audio_heatmap_e2e.rs  audio_viz.rs
sparrow-engine/sparrow-engine-cpu/: Cargo.toml  NativeMethods.g.cs  exports.def  sparrow_engine.h
sparrow-engine/sparrow-engine-cpu/src/: classify.rs  detect.rs  detect_audio.rs  engine.rs  ffi.rs  preprocess.rs
sparrow-engine/sparrow-engine-cpu/tests/: integration_ffi_symbols.rs  integration_mel_classifier.rs  integration_perch2.rs  integration_reexports.rs
sparrow-engine/sparrow-engine-gpu/: Cargo.toml  NativeMethods.g.cs  exports.def  sparrow_engine.h
sparrow-engine/sparrow-engine-gpu/src/: classify.rs  detect.rs  detect_audio.rs  engine.rs  ffi.rs  lib.rs
sparrow-engine/sparrow-engine-gpu/src/audio/: ort_io.rs
sparrow-engine/sparrow-engine-gpu/src/models/: audio.rs  audio_raw.rs  classifier.rs  mod.rs  yolo.rs  (+1 more)
sparrow-engine/sparrow-engine-gpu/tests/: audio_e2e_parity.rs  audio_e2e_parity_fp16.rs  integration_classifier.rs  integration_mel_classifier_gpu.rs
sparrow-engine/sparrow-engine-mobile/: Cargo.toml  NativeMethods.g.cs  build.rs  exports.def  sparrow_engine.h
sparrow-engine/sparrow-engine-mobile/examples/: orca_cascade.rs  orca_ctypes_smoke.py
sparrow-engine/sparrow-engine-mobile/src/: cascade.rs  engine.rs  ffi.rs  lib.rs  pipeline.rs  sys.rs  tflite.rs
sparrow-engine/sparrow-engine-mobile/tests/: cascade_parity.rs
sparrow-engine/sparrow-engine-python/: Cargo.toml  build.sh  pyproject.toml
sparrow-engine/sparrow-engine-python/python/sparrow_engine/: __init__.py  _core.pyi
sparrow-engine/sparrow-engine-python/src/: lib.rs
sparrow-engine/sparrow-engine-python/tests/: test_visualize_audio.py
sparrow-engine/sparrow-engine-server/: Cargo.toml
sparrow-engine/sparrow-engine-server/src/: cli.rs  discover.rs  error.rs  main.rs  response.rs
sparrow-engine/sparrow-engine-types/: Cargo.toml
sparrow-engine/sparrow-engine-types/src/: error.rs  lib.rs  manifest.rs  model_type.rs  types.rs
sparrow-engine/tools/examples/: megadetector-v6.toml
tags/: index.html
(+13 files in other folders)
